{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 308,
  "lineage": "6e41906a-c120-49ac-0f28-62b1f32ae234",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:055962463891:loadbalancer/app/internal/f4f7a40e3712ca66",
            "arn_suffix": "app/internal/f4f7a40e3712ca66",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-internal-331642592.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:055962463891:loadbalancer/app/internal/f4f7a40e3712ca66",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "internal",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0465d2e13dcc52f81"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-036d5800cfa136786"
              },
              {
                "subnet_id": "subnet-0bc9455a8507dfed1"
              }
            ],
            "subnets": [
              "subnet-036d5800cfa136786",
              "subnet-0bc9455a8507dfed1"
            ],
            "vpc_id": "vpc-0f4d4b4325bd6656f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.aws_security_group.Internal_LB",
            "module.vpc.aws_subnet.private_sub_1",
            "module.vpc.aws_subnet.private_sub_2",
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internal_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:055962463891:listener/app/internal/f4f7a40e3712ca66/d2dbb55b91e344ca",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:055962463891:targetgroup/PrivateTargetGroup/f76f5aee14a3f9fd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:055962463891:listener/app/internal/f4f7a40e3712ca66/d2dbb55b91e344ca",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:055962463891:loadbalancer/app/internal/f4f7a40e3712ca66",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.aws_lb.internal_lb",
            "module.lb.aws_lb_target_group.private_tg",
            "module.vpc.aws_security_group.Internal_LB",
            "module.vpc.aws_subnet.private_sub_1",
            "module.vpc.aws_subnet.private_sub_2",
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "private_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:055962463891:targetgroup/PrivateTargetGroup/f76f5aee14a3f9fd",
            "arn_suffix": "targetgroup/PrivateTargetGroup/f76f5aee14a3f9fd",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:055962463891:targetgroup/PrivateTargetGroup/f76f5aee14a3f9fd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "PrivateTargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f4d4b4325bd6656f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "public_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:055962463891:targetgroup/PublicTargetGroup/31a51a268ded440f",
            "arn_suffix": "targetgroup/PublicTargetGroup/31a51a268ded440f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:055962463891:targetgroup/PublicTargetGroup/31a51a268ded440f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "PublicTargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f4d4b4325bd6656f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "private_tg_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "public_tg_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f2592b79ba1f912",
            "domain": "vpc",
            "id": "eipalloc-09f2592b79ba1f912",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-159-102-117.compute-1.amazonaws.com",
            "public_ip": "54.159.102.117",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d5c2984d7bbd035",
            "domain": "vpc",
            "id": "eipalloc-02d5c2984d7bbd035",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-144-84-205.compute-1.amazonaws.com",
            "public_ip": "54.144.84.205",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_threetier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:internet-gateway/igw-0430da9855c405565",
            "id": "igw-0430da9855c405565",
            "owner_id": "055962463891",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0f4d4b4325bd6656f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_nat_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-07c87f33331075a5a",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "aws_nat_gateway.nat_gat_1.id",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Sub RT"
            },
            "tags_all": {
              "Name": "Private Sub RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4d4b4325bd6656f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_nat_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-03536828a7dc446e4",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "aws_nat_gateway.nat_gat_2.id",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Sub RT"
            },
            "tags_all": {
              "Name": "Private Sub RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4d4b4325bd6656f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-097dd00e439300180",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "aws_internet_gateway.igw_threetier.id",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public RT"
            },
            "tags_all": {
              "Name": "Public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4d4b4325bd6656f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DBMS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:security-group/sg-0d170bc5f5b11a92e",
            "description": "Allow DBMS Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d170bc5f5b11a92e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "DBMS Traffic Inbound",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3306
              }
            ],
            "name": "DBMS",
            "name_prefix": "",
            "owner_id": "055962463891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DBMS"
            },
            "tags_all": {
              "Name": "DBMS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4d4b4325bd6656f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "External_LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:security-group/sg-01e06525a9c6b12e0",
            "description": "Allow External_LB Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e06525a9c6b12e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow External_LB Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              }
            ],
            "name": "External_LB",
            "name_prefix": "",
            "owner_id": "055962463891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "External_LB"
            },
            "tags_all": {
              "Name": "External_LB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4d4b4325bd6656f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Internal_LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:security-group/sg-0465d2e13dcc52f81",
            "description": "Allow Internal_LB Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0465d2e13dcc52f81",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Internall_LB Traffic Inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              }
            ],
            "name": "Internal_LB",
            "name_prefix": "",
            "owner_id": "055962463891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Internal_LB"
            },
            "tags_all": {
              "Name": "Internal_LB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4d4b4325bd6656f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Private_EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:security-group/sg-037d0eac5be9d5b26",
            "description": "Allow Private_EC2 Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037d0eac5be9d5b26",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Private_EC2 Traffic Inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              }
            ],
            "name": "Private_EC2",
            "name_prefix": "",
            "owner_id": "055962463891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private_EC2"
            },
            "tags_all": {
              "Name": "Private_EC2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4d4b4325bd6656f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Public_EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "arn": null,
            "description": "Allow Public_EC2 Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b9a3d91c28032cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Public_EC2 Traffic Inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "[aws_security_group.External_LB.id]"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Public_EC2",
            "name_prefix": null,
            "owner_id": null,
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public_EC2"
            },
            "tags_all": {
              "Name": "Public_EC2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4d4b4325bd6656f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:security-group/sg-06c171a130dbb56d4",
            "description": "Allow SSH Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06c171a130dbb56d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Bastion_host Traffic Inbound",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 22
              }
            ],
            "name": "bastion_host",
            "name_prefix": "",
            "owner_id": "055962463891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion_host_sg"
            },
            "tags_all": {
              "Name": "bastion_host_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4d4b4325bd6656f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:subnet/subnet-036d5800cfa136786",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036d5800cfa136786",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055962463891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet AZ1"
            },
            "tags_all": {
              "Name": "Private Subnet AZ1"
            },
            "vpc_id": "vpc-0f4d4b4325bd6656f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:subnet/subnet-0bc9455a8507dfed1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc9455a8507dfed1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055962463891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet AZ1"
            },
            "tags_all": {
              "Name": "Private Subnet AZ1"
            },
            "vpc_id": "vpc-0f4d4b4325bd6656f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub_DB_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:subnet/subnet-0075ed739d6de3a76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0075ed739d6de3a76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055962463891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private DB Subnet AZ1"
            },
            "tags_all": {
              "Name": "Private DB Subnet AZ1"
            },
            "vpc_id": "vpc-0f4d4b4325bd6656f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub_DB_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:subnet/subnet-03f2e28cca8022a32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f2e28cca8022a32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055962463891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private DB Subnet AZ1"
            },
            "tags_all": {
              "Name": "Private DB Subnet AZ1"
            },
            "vpc_id": "vpc-0f4d4b4325bd6656f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:subnet/subnet-0090f3c95e44a8e01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0090f3c95e44a8e01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055962463891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet AZ1"
            },
            "tags_all": {
              "Name": "Public Subnet AZ1"
            },
            "vpc_id": "vpc-0f4d4b4325bd6656f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:subnet/subnet-0eadde57b31fa5b46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eadde57b31fa5b46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055962463891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet AZ1"
            },
            "tags_all": {
              "Name": "Public Subnet AZ1"
            },
            "vpc_id": "vpc-0f4d4b4325bd6656f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "threetiervpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:vpc/vpc-0f4d4b4325bd6656f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-043a31b53ac2b5fa9",
            "default_route_table_id": "rtb-09e3e72ec0af1385a",
            "default_security_group_id": "sg-0b23774f2cc2bcc1e",
            "dhcp_options_id": "dopt-0f52428eb6c652549",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f4d4b4325bd6656f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09e3e72ec0af1385a",
            "owner_id": "055962463891"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}